--- a/player.html
+++ b/player.html
@@ -9,8 +9,11 @@
 <body>
     <h1>The Music Player</h1>
     <!-- ADD DROP DOWN MENU -->
+    <select name="albums" id="albumSelect"></select>
     <!-- ADD PLAY BUTTON -->
+    <button id="playButton">Play</button>
     <!-- ADD SHOW FAVORITE ALBUM BUTTON -->
+    <button id="favoriteAlbumButton">Show my favorite album</button>
     <p id="favoriteAlbum"></p>
 </body>
 </html>
